--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,4 +1,6 @@
 .main-header{
-    color: $font-black;
-    background-color: $primary-color;
+  color: $main-font-color;
+  background-color: $primary-color;
+  font-size: 17px;
+  line-height: 24px;
 }
