--- a/source/sass/colors.scss
+++ b/source/sass/colors.scss
@@ -1,5 +1,8 @@
-$font-black: #000000;
-$font-grey:  #444444;
+$main-font-color: #000000;
+$loghten-font:  #444444;
 $primary-color: #ffffff;
 $theme-color: #63d1bb;
 $darken-theme-color: #56c3b2;
+$link-hover-color: rgba( 0,0,0, 0.6);
+$link-active-color: rgba( 0,0,0, 0.3);
+$btn-active-color: rgba( 256,256,256, 0.3);
