--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,26 +9,10 @@
 @import "blocks/main-nav__list.scss";
 @import "blocks/site-nav__item.scss";
 @import "blocks/user-nav__item.scss";
-@import "blocks/directions";
-@import "blocks/directions__info.scss";
-@import "blocks/directions__list.scss";
-@import "blocks/directions__item.scss";
-@import "blocks/weekly-goods__title.scss";
-@import "blocks/weekly-goods__subtitle.scss";
-@import "blocks/weekly-goods__description.scss";
-@import "blocks/weekly-goods__specifications.scss";
-@import "blocks/weekly-goods__value.scss";
-@import "blocks/weekly-goods__price.scss";
-@import "blocks/weekly-goods__btn.scss";
-@import "blocks/advantages__title.scss";
-@import "blocks/advantages__list.scss";
-@import "blocks/advantages__item.scss";
-@import "blocks/reviews__title.scss";
-@import "blocks/rewiews__item.scss";
-@import "blocks/reviews__author.scss";
-@import "blocks/rewiews__text.scss";
-@import "blocks/contacts__title.scss";
-@import "blocks/contacts__field.scss";
-@import "blocks/contacts__value.scss";
+@import "blocks/directions.scss";
+@import "blocks/weekly-goods.scss";
+@import "blocks/advantages.scss";
+@import "blocks/rewiews.scss";
+@import "blocks/contacts.scss";
 @import "blocks/main-footer.scss";
-@import "blocks/copyright__creator.scss"
+@import "blocks/copyright__creator.scss";
