--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -4,3 +4,38 @@
   background-repeat: no-repeat;
   background-position: top left;
 }
+
+.directions__info {
+  font-size: 27px;
+  font-weight:$font-bold;
+  line-height: 30px;
+  margin: 0px;
+  padding-top: 76px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 215px;
+  text-align: center;
+}
+
+.directions__list {
+  margin: 0px;
+  padding: 0px;
+  margin-top: 120px;
+  list-style: none;
+  font-size: 19px;
+  font-weight: $font-bold;
+  line-height: 24px;
+  color: $primary-color;
+}
+
+.directions__item{
+  padding: 30px 0px;
+  background-color: $theme-color;
+  span {
+    display: block;
+    width: 106px;
+  }
+  &:nth-child(2){
+  background-color: $darken-theme-color;
+  }
+}
