--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -2,11 +2,11 @@
 
 }
 
-@mixin fieldset-styling{
+@mixin fieldset-unstyling{
   border: none;
 }
 
-@mixin list-styling {
+@mixin list-unstyling {
     list-style: none;
     margin: 0px;
     padding: 0px;
