--- a/source/sass/blocks/good.scss
+++ b/source/sass/blocks/good.scss
@@ -1,5 +1,11 @@
 .good {
-  margin-top: 30px;
+  border: 1px solid #ececec;
+  &:hover, &:focus{
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+  &:active{
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .good__title {
