--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,4 @@
 @import "blocks/order-fieldset.scss";
 @import "blocks/main-footer.scss";
 @import "blocks/copyright.scss";
+@import "blocks/modal.scss";
