--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -1,6 +1,6 @@
 .directions {
   margin-top: 1px;
-  background-image: url(../../img/hero-mobile@1x.jpg);
+  background-image: url(../img/hero-mobile@1x.jpg);
   background-repeat: no-repeat;
   background-position: top left;
 }
@@ -27,14 +27,29 @@
   color: $primary-color;
 }
 
-.directions__item{
+.directions__link {
+  display: inline-block;
   padding: 30px 0px;
   background-color: $theme-color;
-  span {
+  width: 100%;
+    span {
     display: block;
     width: 106px;
   }
-  &:nth-child(2){
-  background-color: $darken-theme-color;
+  &:hover, &:focus{
+    padding-top: 25px;
+    padding-bottom: 40px;
+  }
+  &:active {
+    span{
+    color:  $btn-active-color;
+    }
   }
 }
+  .directions__item {
+    &:nth-child(2) .directions__link{
+    background-color: $darken-theme-color;
+  }
+}
+
+
