--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,3 +1,7 @@
 .main-footer {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
+}
+
+.main-footer__social {
+  @include list-unstyling;
 }
