--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -29,6 +29,9 @@
 .order-fieldset{
   input, textarea{
     border: none;
+    width: 260px;
+    padding-top:15px;
+    padding-bottom:15px;
     border-bottom: 2px solid $main-font-color;
     &:hover, &:focus, &:active{
       border-bottom: 2px solid $theme-color;
