--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "colors.scss";
 @import "mixins.scss";
 @import "global.scss";
+@import "visually-hidden.scss";
 @import "blocks/btn.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
