--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -28,7 +28,7 @@
 }
 
 .directions__link {
-  display: inline-block;
+  display: block;
   padding: 30px 0px;
   background-color: $theme-color;
   width: 100%;
@@ -38,7 +38,12 @@
   }
   &:hover, &:focus{
     padding-top: 25px;
-    padding-bottom: 40px;
+    padding-bottom: 35px;
+    transform: scaleY(1.14)
+    translateY(-5px);
+    span {
+      transform: scaleY(0.86);
+    }
   }
   &:active {
     span{
