--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -2,7 +2,14 @@
 
 }
 
+@mixin img-width {
+  max-width: 100%;
+  height: auto;
+}
+
 @mixin fieldset-unstyling{
+  padding: 0px;
+  margin: 0px;
   border: none;
 }
 
