--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -9,15 +9,17 @@
   text-decoration: none;
   text-transform: uppercase;
   background-color: $primary-color;
-  &:hover, &:focus{
+
+  &:hover,
+  &:focus {
     background-color: $loghten-font;
     color: $primary-color;
     border: 2px solid $loghten-font;
-  };
-  &:active{
+  }
+
+  &:active {
     background-color: $loghten-font;
     color: $btn-active-color;
     border: 2px solid $loghten-font;
   }
-
 }
