--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -1,15 +1,15 @@
 .directions {
   margin-top: 1px;
-  background-image: url(../img/hero-mobile@1x.jpg);
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: top left;
 }
 
 .directions__info {
   font-size: 27px;
-  font-weight:$font-bold;
+  font-weight: $font-bold;
   line-height: 30px;
-  margin: 0px;
+  margin: 0;
   padding-top: 76px;
   margin-right: auto;
   margin-left: auto;
@@ -29,30 +29,36 @@
 
 .directions__link {
   display: block;
-  padding: 30px 0px;
+  padding: 30px 0;
   background-color: $theme-color;
   width: 100%;
-    span {
+
+  span {
     display: block;
     width: 106px;
   }
-  &:hover, &:focus{
+
+  &:hover,
+  &:focus {
     padding-top: 25px;
     padding-bottom: 35px;
     transform: scaleY(1.14)
-    translateY(-5px);
+      translateY(-5px);
+
     span {
       transform: scaleY(0.86);
     }
   }
+
   &:active {
-    span{
-    color:  $btn-active-color;
+    span {
+      color: $btn-active-color;
     }
   }
 }
-  .directions__item {
-    &:nth-child(2) .directions__link{
+
+.directions__item {
+  &:nth-child(2n) .directions__link {
     background-color: $darken-theme-color;
   }
 }
