--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -1,7 +1,3 @@
-.order-fieldset {
-
-}
-
 .order-fieldset__legend {
   color: $theme-color;
   font-size: 17px;
@@ -15,8 +11,8 @@
 }
 
 .order-fieldset__item {
-  padding-top:24px;
-  padding-bottom:24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .field-label {
@@ -26,14 +22,18 @@
   line-height: 18px;
 }
 
-.order-fieldset{
-  input, textarea{
+.order-fieldset {
+  input,
+  textarea {
     border: none;
     width: 260px;
-    padding-top:15px;
-    padding-bottom:15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-bottom: 2px solid $main-font-color;
-    &:hover, &:focus, &:active{
+
+    &:hover,
+    &:focus,
+    &:active {
       border-bottom: 2px solid $theme-color;
     }
   }
