--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,20 +1,16 @@
-@mixin container {
-
-}
-
 @mixin img-width {
   max-width: 100%;
   height: auto;
 }
 
-@mixin fieldset-unstyling{
-  padding: 0px;
-  margin: 0px;
+@mixin fieldset-unstyling {
+  padding: 0;
+  margin: 0;
   border: none;
 }
 
 @mixin list-unstyling {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
