--- a/source/sass/blocks/weekly-goods.scss
+++ b/source/sass/blocks/weekly-goods.scss
@@ -50,3 +50,112 @@
   margin-top: 16px;
   margin-bottom: 0;
 }
+
+
+@media (min-width: $mobile-width) {
+  .weekly-goods{
+    @include inside-container;
+    display: flex;
+    flex-direction: column;
+  }
+  .weekly-goods__header{
+    display: flex;
+    flex-direction: column;
+    order: 1;
+  }
+  .weekly-goods__title{
+    margin: 0;
+    order: 2;
+  }
+
+  .weekly-goods__subtitle {
+    padding-top: 20px;
+    font-size: 25px;
+    font-weight: $font-bold;
+    line-height: 30px;
+    order: 1;
+  }
+
+  .weekly-goods__main-container{
+    display: flex;
+    flex-direction: column;
+    order: 2;
+  }
+
+  .weekly-goods__description {
+    color: $loghten-font;
+    font-size: 15px;
+    font-weight: $font-normal;
+    line-height: 20px;
+    width: 249px;
+    order: 3;
+  }
+  .weekly-goods__specifications {
+    order: 4;
+  }
+  .weekly-goods__image{
+    order: 5;
+  }
+  .weekly-goods__price{
+    margin-right: auto;
+    margin-left: auto;
+    order: 6;
+  }
+  .weekly-goods__btn{
+    order: 7;
+  }
+  .weekly-goods__image-contaner{
+    display: none;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .weekly-goods__header{
+    flex-grow: 2;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    order: 1;
+  }
+  .weekly-goods__title{
+    display: flex;
+    margin: 0;
+    order: 2;
+    width: 70px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: 0;
+  }
+  .weekly-goods__subtitle {
+    padding: 0;
+    margin: 0;
+    color: $main-font-color;
+    font-size: 43px;
+    font-weight: font-bold;
+    line-height: 50px;
+    order: 1;
+  }
+
+  .weekly-goods__image{
+    display: none;
+  }
+
+ .weekly-goods__main-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    order: 2;
+  }
+
+  .weekly-goods__sub-container{
+    display: flex;
+    flex-direction: column;
+    width: 282px;
+  }
+  .weekly-goods__image-contaner{
+    margin-left: 50px;
+    display: flex;
+    order: 3;
+    width: 50%;
+  }
+}
