--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,7 +13,6 @@
 }
 
 .contacts__value {
-  white-space: pre;
   color: $loghten-font;
   font-size: 15px;
   font-weight: $font-normal;
@@ -22,6 +21,8 @@
 
 .contacts__email {
   position: relative;
+  text-decoration: none;
+  color: $main-font-color;
 
   &::after {
     content: "";
@@ -40,5 +41,38 @@
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+@media (min-width: $mobile-width) {
+  .contacts__title{
+    @include inside-container;
+  }
+  .contacts__specifications{
+    @include inside-container;
+  }
+  .contacts__field{
+    vertical-align: top;
+    width: 50px;
+  }
+  .contacts__value {
+    padding-left: 30px;
+    width: 180px;
+    span {
+      display: block;
+    width: 150px;
+    }
+  }
+  .contacts__btn-container{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    @include inside-container;
+  }
+  .contacts__btn{
+    padding: 0;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    text-align: center;
+    width: 100%;
   }
 }
