--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -4,3 +4,16 @@
   font-weight: $font-bold;
   line-height: 18px;
 }
+
+@media (min-width: $mobile-width) {
+  .copyright{
+    dispaly: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .copyrgiht__creator{
+    display: inline-block;
+  }
+}
