--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -1,10 +1,3 @@
-.directions {
-  margin-top: 1px;
-  background-image: url("../img/hero-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: top left;
-}
-
 .directions__info {
   font-size: 27px;
   font-weight: $font-bold;
@@ -60,5 +53,46 @@
 .directions__item {
   &:nth-child(2n) .directions__link {
     background-color: $darken-theme-color;
+  }
+}
+
+@media (min-width: $mobile-width) {
+  .directions {
+    margin-top: 1px;
+    background-image: url("../img/hero-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% -10%;
+  }
+  .directions__list{
+    span{
+    @include inside-container;
+    }
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .directions{
+    margin-top: 1px;
+    background-image: url("../img/hero-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% -10%;
+  }
+  .directions__info{
+    width: 500px;
+    margin-bottom: 360px;
+    color: $main-font-color;
+    font-size: 43px;
+    font-weight: $font-bold;
+    line-height: 50px;
+  }
+  .directions__list {
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    width: 668px;
+  }
+  .directions__item {
+    display: flex;
+    width: 50%;
   }
 }
