--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,5 @@
 .main-nav {
+  posotion: relative;
   background-color: $primary-color;
   color: $main-font-color;
 }
@@ -8,4 +9,49 @@
   list-style: none;
   color: $main-font-color;
   font-weight: $font-bold;
+}
+
+.main-nav__logo-container {
+  position: relative;
+}
+
+@media (min-width: $mobile-width) {
+  .main-nav__toggle{
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+  }
+
+  .main-nav__logo-container {
+    display: block;
+    padding: 20px 0;
+    box-shadow: 0 1px 0 #ececec;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .main-nav{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .main-nav__logo-container {
+    order: 1;
+    dispaly: flex;
+    width: 320px;
+  }
+
+  .main-nav__wrapper{
+    order: 2;
+    display:flex;
+    width: 347px;
+  }
+  .main-nav__list{
+    display:flex;
+    width: 347px;
+  }
+  .main-nav__toggle{
+    display: none;
+  }
 }
