--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,4 +1,5 @@
 .main-header {
+  position: relative;
   color: $main-font-color;
   background-color: $primary-color;
   font-size: 17px;
@@ -6,9 +7,7 @@
 }
 
 .main-header__logo {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
 }
 
 .main-header__logo-image {
@@ -16,8 +15,19 @@
   margin-right: auto;
 }
 
-@media (max-width: $tablet-width){
+@media (min-width: $mobile-width){
   .main-header{
     box-shadow: 0 1px 0 #ececec, inset 0 1px 0 #ececec;
+  }
+  .main-header__logo {
+    top: 10px;
+    right: 50%;
+    left: 50%;
+  }
+}
+
+@media (min-width: $tablet-width){
+  .main-header__logo {
+    left: 30%;
   }
 }
