--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,6 +1,6 @@
 $mobile-width: 320px;
-$tablet-width: 1150px;
-
+$tablet-width: 668px;
+$desctop-width: 1050px;
 
 body {
   font-family: $font-stack;
