--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-nav.scss";
+@import "blocks/stock-nav.scss";
 @import "blocks/user-nav.scss";
 @import "blocks/directions.scss";
 @import "blocks/weekly-goods.scss";
