--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -4,7 +4,17 @@
 }
 
 @mixin inside-container{
-  padding: 0 30px;
+    padding: 0 30px;
+  @media (min-width: $tablet-width) {
+    padding: 0 50px;
+  }
+  @media (min-width: $desctop-width) {
+    padding: 0 50px;
+  }
+}
+
+@mixin container{
+  margin: 0 auto;
 }
 
 @mixin fieldset-unstyling {
