--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -21,11 +21,14 @@
 
 @media (min-width: $mobile-width) {
   .advantages{
-    @include inside-container
+    @include inside-container;
   }
 }
 
 @media (min-width: $tablet-width) {
+  .advantages{
+    max-width: 1050px;
+  }
   .advantages__title {
     font-size: 43px;
     line-height: 50px;
@@ -66,6 +69,9 @@
 }
 
 @media (min-width: $desctop-width){
+  .advantages{
+    @include central-container;
+  }
   .advantages__title {
     font-size: 53px;
     line-height: 57px;
