--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -12,6 +12,7 @@
 
 .directions__list {
   @include list-unstyling;
+  width: 100%;
   margin-top: 120px;
   list-style: none;
   font-size: 19px;
@@ -62,20 +63,18 @@
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% -10%;
+    background-color: #f9f9f9;
   }
   .directions__list{
     span{
-    @include inside-container;
+      @include inside-container;
     }
   }
 }
 
 @media (min-width: $tablet-width) {
-  .directions{
-    margin-top: 1px;
+  .directions {
     background-image: url("../img/hero-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% -10%;
   }
   .directions__info{
     width: 500px;
@@ -87,25 +86,30 @@
   }
   .directions__list {
     display: flex;
-    flex-direction:row;
-    flex-wrap:wrap;
-    min-width: 668px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
   }
   .directions__item {
     display: flex;
     width: 50%;
   }
 }
-@media (min-width: $tablet-width) {
+@media (min-width: $desctop-width) {
   .directions__info{
     width: 630px;
     font-size: 53px;
     line-height: 57px;
   }
   .directions__list {
-    min-width: 1050px;
+    max-width: 1050px;
+    @include central-container;
+      span{
+        padding-left: 0px;
+        padding-left: 37px;
+      }
   }
-  .directions__item {
-    min-width: 525px;
+  .directions__link{
+
   }
 }
