--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -7,6 +7,7 @@
 }
 
 .main-header__logo {
+  z-index: 1;
   position: absolute;
 }
 
@@ -29,5 +30,10 @@
 @media (min-width: $tablet-width){
   .main-header__logo {
     left: 30%;
+  }
+}
+@media (min-width: $desctop-width){
+  .main-header__logo {
+    left: 46%;
   }
 }
