--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -62,6 +62,7 @@
 
 @media (min-width: $tablet-width) {
   .reviews{
+    max-width: 1050px;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -78,8 +79,10 @@
     line-height: 50px;
   }
   .reviews__btn {
-    order: 2;
-    max-height: 52px;
+    position: absolute;
+    height: 20px;
+    top: 50px;
+    right: 50px;
   }
 
   .reviews__item{
@@ -89,7 +92,7 @@
 
   .reviews__text {
     order: 3;
-    width: 642px;
+    width: 638px;
     color: $loghten-font;
     font-size: 17px;
     font-weight: $font-normal;
@@ -99,10 +102,17 @@
   .reviews__author{
     order: 4;
   }
+
+  .reviews__toggles {
+    position: absolute;
+    right: 50px;
+    bottom: 50px;
+  }
 }
 
 @media (min-width: $desctop-width) {
   .reviews{
+    @include central-container;
     background-repeat: no-repeat;
     background-position: top left;
   }
@@ -110,9 +120,7 @@
     font-size: 53px;
     line-height: 57px;
   }
-  .reviews__btn{
-    position: absolute;
-    top: 50px;
-    right: 50px;
+  .reviews__text {
+    width: 768px;
   }
 }
