--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -3,6 +3,11 @@
   height: auto;
 }
 
+@mixin central-container{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @mixin inside-container{
     padding: 0 30px;
   @media (min-width: $tablet-width) {
