--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -93,10 +93,12 @@
     line-height: 50px;
   }
   .contacts__specifications{
-
+    width: 100%;
   }
   .contacts__specifications tbody {
     display: flex;
+    flex-grow: 1;
+    justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
   }
