--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -29,6 +29,7 @@
     order: 2;
     width: 50%;
     display: flex;
+    flex-grow: 1;
     flex-direction: row;
   }
 
@@ -54,5 +55,6 @@
 @media (min-width: $desctop-width){
   .site-nav{
     order: 1;
+    border-bottom: 1px solid #ececec;
   }
 }
