--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -34,7 +34,7 @@
   }
 
   .site-nav__item{
-    width: 170px;
+
     box-shadow: none;
     border: 1px solid #ececec;
     border-bottom: none;
@@ -46,8 +46,11 @@
       font-weight: $font-bold;
       line-height: 24px;
       display: inline-block;
-      width: 100%;
+      width: 80%;
       margin: 0;
+      &:nth-child(1){
+        padding-left: 50px;
+      }
     }
   }
 }
@@ -56,7 +59,21 @@
   .site-nav{
     order: 1;
     border-bottom: 1px solid #ececec;
-    padding-right: 22%;
+    padding-right: 21%;
     width: 30%;
+  }
+
+  .site-nav__item{
+    width: 170px;
+    box-shadow: none;
+    border: 1px solid #ececec;
+    border-bottom: none;
+    border-top: none;
+    a {
+      margin: 0;
+      &:nth-child(1){
+        padding-left: 0px;
+      }
+    }
   }
 }
