--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -54,15 +54,16 @@
   }
 
   .user-nav__cart{
+    margin: 0;
     margin-left: auto;
     margin-right: 0;
-    min-width: 264px;
     border-left: none;
     border-right: none;
     a {
+      padding-right: 50px;
+      display: inline-block;
       margin: 0;
       width: 100%;
-      padding-left: 70px;
     }
   }
 
@@ -71,13 +72,13 @@
     align-self: flex-end;
     margin-left: auto;
     margin-right: 0;
-    width: 240px;
+    width: auto;
+    padding-right: 50px;
     order: 4;
     color: $loghten-font;
     font-size: 15px;
     font-weight: $font-normal;
     line-height: 24px;
-    @include inside-container;
   }
 }
 
@@ -91,5 +92,20 @@
     width: 82px;
     margin-left: auto;
     margin-right: 0;
+  }
+  .user-nav__cart{
+    margin-left: auto;
+    margin-right: 0;
+    border-left: none;
+    border-right: none;
+    a {
+      padding: 0;
+      margin: 0;
+      width: auto;
+      padding-left: 70px;
+    }
+  }
+  .user-nav__delivery{
+    @include inside-container;
   }
 }
