--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -99,7 +99,7 @@
     border-left: none;
     border-right: none;
     a {
-      padding: 0;
+      padding-right: 0;
       margin: 0;
       width: auto;
       padding-left: 70px;
