--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -37,6 +37,8 @@
   .main-nav{
     max-width: 1150px;
     display: block;
+    background-color: transparent;
+    background: linear-gradient(#ffffff 50%, #f9f9f9 50%);
   }
 
   .main-nav__toggle-contatainer{
