Работа над каталогом #1

--- a/source/sass/blocks/catalog-items.scss
+++ b/source/sass/blocks/catalog-items.scss
@@ -1,3 +1,11 @@
 .catalog-items__list {
   @include list-unstyling;
+  @include inside-container;
+}
+
+@media (min-width: $desctop-width){
+  .catalog-items__list {
+    display: flex;
+    justify-content: space-between;
+  }
 }
