--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/contacts.scss";
 @import "blocks/page-header.scss";
 @import "blocks/catalog-items.scss";
+@import "blocks/catalog-video.scss";
 @import "blocks/good.scss";
 @import "blocks/production.scss";
 @import "blocks/form-sorting.scss";
