--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,8 +3,12 @@
 }
 
 .page-header__title {
+  margin-top: -20px;
   padding-top: 74px;
   padding-bottom: 70px;
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
   color: $main-font-color;
   font-size: 27px;
   font-weight: $font-bold;
