--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -1,9 +1,19 @@
 .production {
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
   border: 1px solid #ececec;
 }
 
+.production__container{
+  width: 100%;
+  position: relative;
+}
+
 .production__title {
-  width: 126px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
   color: $main-font-color;
   font-size: 17px;
   font-weight: $font-bold;
@@ -11,9 +21,51 @@
 }
 
 .production__description {
-  width: 183px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
   color: $loghten-font;
   font-size: 13px;
   font-weight: $font-normal;
   line-height: 24px;
+}
+
+.production__btn{
+  display: block;
+  text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px;
+  padding: 12px 15px;
+
+}
+
+@media (min-width: $tablet-width) {
+  .production {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-right: 50px;
+    margin-left: 50px;
+    border: 1px solid #ececec;
+  }
+  .production__title {
+    margin-left: 40px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .production__description {
+    width: 70%;
+    margin-left: 40px;
+    font-size: 15px;
+    line-height: 30px;
+  }
+
+  .production__btn{
+    width: 70%;
+    margin-left: 40px;
+    padding: 12px 0px;
+  }
 }
