--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -67,9 +67,7 @@
   .site-nav__item{
     width: 170px;
     box-shadow: none;
-    border: 1px solid #ececec;
-    border-bottom: none;
-    border-top: none;
+    border: none;
     a {
       margin: 0;
       &:nth-child(1){
