--- a/source/sass/blocks/catalog-items.scss
+++ b/source/sass/blocks/catalog-items.scss
@@ -7,5 +7,8 @@
   .catalog-items__list {
     display: flex;
     justify-content: space-between;
+    max-width: 1150px;
+    @include container;
+    margin-bottom: 30px;
   }
 }
