--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -7,7 +7,7 @@
 
 @media (min-width: $mobile-width) {
   .copyright{
-    dispaly: flex;
+    display: flex;
     flex-wrap: wrap;
     width: 70%;
     margin-left: auto;
