--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -37,7 +37,10 @@
   .main-nav{
     max-width: 1150px;
     display: block;
-    background-color: transparent;
+    background: linear-gradient(#ffffff 50%, #f1f1f1 50%);
+  }
+
+  .main-nav--index{
     background: linear-gradient(#ffffff 50%, #f9f9f9 50%);
   }
 
