--- a/source/sass/blocks/good.scss
+++ b/source/sass/blocks/good.scss
@@ -68,8 +68,10 @@
     width: 50%;
   }
   .good__bottom {
+    padding-top: 10px;
     margin-top: auto;
     margin-bottom: none;
+    border-top: 1px solid #ececec;
   }
 }
 
