--- a/source/sass/blocks/form-sorting.scss
+++ b/source/sass/blocks/form-sorting.scss
@@ -4,9 +4,10 @@
   font-size: 13px;
   font-weight: $font-normal;
   line-height: 24px;
+  @include inside-container;
 }
 
-.formn-sorting__fieldset {
+.form-sorting__fieldset {
   @include fieldset-unstyling;
 }
 
@@ -15,4 +16,80 @@
   font-size: 14px;
   font-weight: $font-normal;
   line-height: 16px;
+  @include inside-container;
+}
+
+.form-sorting__btn {
+  margin-left: 30px;
+  padding: 0;
+  padding: 12px 50px;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .form-sorting__description {
+    width: 60%;
+    font-size: 17px;
+    line-height: 30px;
+  }
+  .form-sorting__additional-contaner{
+    order: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .form-sorting__bottom-container{
+    max-width: 700px;
+    order: 2;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .form-sorting__fieldset--bottom{
+    width: 100%;
+  }
+  .form-sorting__btn {
+    order: 1;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .form-sorting__important-inputs{
+    margin-top: 65px;
+    order: 2;
+  }
+}
+
+@media (min-width: $desctop-width)  {
+  .form-sorting__description{
+    max-width: 700px;
+    @include container;
+  }
+  .order-fieldset__container{
+    max-width: 700px;
+    @include container;
+  }
+  .form-sorting__bottom-container{
+    width: 700px;
+    order: 2;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    @include container;
+  }
+  .form-sorting__btn {
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .form-sorting__important-inputs{
+    padding: 0px;
+    margin-left: auto;
+    margin-right: 0;
+    font-size: 17px;
+    line-height: 30px;
+  }
 }
