--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -8,6 +8,30 @@
 
 @media (min-width: $mobile-width) {
   .main-footer__container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     @include inside-container;
   }
+  .main-footer__logo {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width){
+  .main-footer__logo {
+    display: inline-block;
+    width: 100px;
+    margin: 0;
+  }
+}
+
+@media (min-width: $desctop-width){
+  .main-footer__container{
+    max-width: 1050px;
+    @include container;
+  }
+   .main-footer__copyright{
+    margin: 0;
+   }
 }
