--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -26,6 +26,8 @@
   padding: 30px 0;
   background-color: $theme-color;
   width: 100%;
+  text-decoration: none;
+  color: $primary-color;
 
   span {
     display: block;
