--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -6,20 +6,28 @@
   position: relative;
   padding-top: 30px;
   margin-bottom: 10px;
-  width: 60px;
+  width: 100%;
   color: $theme-color;
   font-size: 17px;
   font-weight: $font-bold;
   line-height: 16px;
   text-transform: uppercase;
+
+  span{
+    z-index: 1;
+    background-color: $primary-color;
+    padding-right: 20px;
+  }
+
   &::after{
     position: absolute;
     content: "";
     height: 2px;
-    width: 190px;
+    right: 0;
+    left: 0;
     background-color: $theme-color;
     bottom: 7px;
-    left: 70px;
+    z-index: -1;
   }
 }
 
@@ -50,11 +58,21 @@
     padding-bottom: 15px;
     padding-left: 15px;
     border-bottom: 2px solid $main-font-color;
-
+    &::placeholder {
+      opacity: 0.3;
+      color: #444444;
+    }
     &:hover,
     &:focus,
     &:active {
       border-bottom: 2px solid $theme-color;
+    }
+  }
+  textarea{
+    &:hover,
+    &:focus,
+    &:active{
+      border: 2px solid $theme-color
     }
   }
 }
@@ -74,6 +92,10 @@
 
 
   .order-fieldset__legend{
+    width: 60px;
+    span{
+      background-color: transparent;
+    }
     &::after{
       display: none;
     }
