--- a/source/sass/blocks/stock-nav.scss
+++ b/source/sass/blocks/stock-nav.scss
@@ -7,8 +7,8 @@
 }
 
 .stock-nav__item{
+  padding-top: 20px;
   a {
-    padding-top: 20px;
     padding-right: 30px;
     text-decoration: none;
     width: 160px;
@@ -17,6 +17,15 @@
     font-size: 15px;
     font-weight: $font-bold;
     line-height: 24px;
+
+    &:hover,
+    &:focus {
+      color: $link-hover-color;
+    }
+
+    &:active {
+      color: $link-active-color;
+    }
   }
 }
 
