--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "normalize.scss";
 @import "font-stack.scss";
+@import "variables.scss";
 @import "colors.scss";
 @import "global.scss";
 @import "mixins.scss";
