--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -66,6 +66,11 @@
     background-repeat: no-repeat;
     background-position: 50% -10%;
     background-color: #f9f9f9;
+    @media (min-resolution: $retina-dpi),
+    (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-mobile@2x.jpg");
+      background-size: 575px 373px;
+    }
   }
   .directions__list{
     span{
@@ -78,6 +83,11 @@
   .directions {
     margin-top: 0;
     background-image: url("../img/hero-tablet@1x.jpg");
+    @media (min-resolution: $retina-dpi),
+    (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 1150px 746px;
+    }
   }
   .directions__info{
     width: 500px;
