--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -69,7 +69,12 @@
     flex-wrap: wrap;
     background-image: url(../img/review@1x.jpg);
     background-repeat: no-repeat;
-    background-position: top left;
+    background-position: 50px 0;
+    @media (min-resolution: $retina-dpi),
+    (min-resolution: $retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size:  350px 457px;
+    }
   }
   .reviews__title{
     order: 1;
