--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -59,8 +59,8 @@
     margin-right: 0;
     border-left: none;
     border-right: none;
+    padding-right: 50px;
     a {
-      padding-right: 50px;
       display: inline-block;
       margin: 0;
       width: 100%;
@@ -94,15 +94,16 @@
     margin-right: 0;
   }
   .user-nav__cart{
+    padding-right: 0;
     margin-left: auto;
     margin-right: 0;
     border-left: none;
     border-right: none;
     a {
+      text-align: right;
       padding-right: 0;
       margin: 0;
       width: auto;
-      padding-left: 70px;
     }
   }
   .user-nav__delivery{
