--- a/source/sass/blocks/good.scss
+++ b/source/sass/blocks/good.scss
@@ -14,9 +14,13 @@
   }
 }
 
-.good__image{
+.good__image-container{
   order: 1;
   display: flex;
+}
+
+.good__image{
+  @include img-width;
 }
 
 .good__info-container{
@@ -62,7 +66,7 @@
     display: flex;
     flex-direction: row;
   }
-  .good__image{
+  .good__image-container{
     width: 50%;
   }
   .good__info-container{
@@ -82,7 +86,7 @@
     display: flex;
     flex-direction: column;
   }
-  .good__image{
+  .good__image-container{
     width: 100%;
   }
   .good__info-container{
