--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -50,6 +50,9 @@
   }
   .contacts__title{
   }
+  .contacts__flag-icon{
+    display: none;
+  }
   .contacts__specifications{
     display: flex;
   }
@@ -81,16 +84,33 @@
 
 @media (min-width: $tablet-width) {
   .contacts{
+    position: relative;
     @include central-container;
     @include inside-container;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    &::after{
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 34px;
+      background-image: url("../img/bg-zigzag-line.svg");
+      background-repeat: repeat-x;
+      left: 0px;
+      top: 0px;
+    }
   }
   .contacts__title{
+    position: relative;
     padding: 0px;
     font-size: 43px;
     line-height: 50px;
+  }
+  .contacts__flag-icon{
+    display: block;
+    position: absolute;
+    right: 100px;
   }
   .contacts__specifications{
     width: 100%;
@@ -120,6 +140,9 @@
     @include central-container;
     @include inside-container;
   }
+  .contacts{
+    padding-top: 70px;
+  }
   .contacts__specifications{
     box-sizing: border-box;
     width: 40%;
@@ -131,5 +154,14 @@
   .contacts__container{
     display: flex;
     flex-direction: column;
+  }
+  .contacts__title{
+    font-size: 53px;
+    line-height: 57px;
+  }
+  .contacts__flag-icon{
+    position: absolute;
+    left: 0;
+    margin-left: -50px;
   }
 }
