--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -31,6 +31,13 @@
     top: 10px;
     right: 50%;
     left: 50%;
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+    &:active{
+      opacity: 0.3;
+    }
   }
 }
 
