--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -63,6 +63,7 @@
 @media (min-width: $tablet-width) {
   .reviews{
     max-width: 1050px;
+    padding-bottom: 200px;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -76,6 +77,7 @@
       background-size:  350px 457px;
     }
   }
+
   .reviews__title{
     order: 1;
     color: $main-font-color;
