--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -15,15 +15,29 @@
     &:hover,
     &:focus {
       color: $link-hover-color;
+      .user-nav__search-icon,
+      .user-nav__cart-icon{
+        opacity: 1;
+        fill: $theme-color;
+      }
     }
 
     &:active {
       color: $link-active-color;
+      .user-nav__search-icon,
+      .user-nav__cart-icon{
+        opacity: 0.3;
+        fill: $theme-color;
+      }
     }
   }
 }
 
 .user-nav__delivery{
+  display: none;
+}
+
+.user-nav__search-icon{
   display: none;
 }
 
@@ -38,6 +52,7 @@
   }
 
   .user-nav__item{
+    position: relative;
     box-shadow: none;
     border: 1px solid #ececec;
     border-bottom: none;
@@ -49,12 +64,22 @@
     margin-left: 50%;
   }
 
-  .search span{
+  .user-nav__search-link {
+    span{
     display: none;
+    }
+  .user-nav__search-icon{
+    position: absolute;
+    display: block;
+    left: 30px;
+    fill: $main-font-color;
+    opacity: 0.2;
+    }
   }
 
   .user-nav__cart{
     margin: 0;
+    padding-left: 30px;
     margin-left: auto;
     margin-right: 0;
     border-left: none;
@@ -65,6 +90,13 @@
       margin: 0;
       width: 100%;
     }
+  }
+  .user-nav__cart-icon {
+    position: absolute;
+    display: block;
+    left: 0px;
+    fill: $main-font-color;
+    opacity: 0.2;
   }
 
   .user-nav__delivery{
