--- a/source/sass/blocks/weekly-goods.scss
+++ b/source/sass/blocks/weekly-goods.scss
@@ -108,6 +108,20 @@
 }
 
 @media (min-width: $tablet-width) {
+  .weekly-goods{
+    padding-bottom: 70px;
+    position: relative;
+      &::after{
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 34px;
+        background-image: url("../img/bg-zigzag-fill.svg");
+        background-repeat: repeat-x;
+        left: 0px;
+        top: -20px;
+    }
+  }
   .weekly-goods__header{
     flex-grow: 2;
     margin-top: 30px;
